--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,8 @@ end
 
 target 'ReactNativeAnimatedDrawerMenu' do
   config = use_native_modules!
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 
   # Flags change depending on the env values.
   flags = get_default_flags()
