--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/native": "^6.1.2",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-ionicons": "^4.x",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0"
+    "react-native-screens": "^3.19.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
